; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/bridge/extr_br_multicast.c_br_multicast_add_port.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/bridge/extr_br_multicast.c_br_multicast_add_port.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_bridge_port = type { i32, i32, i32 }

@br_multicast_router_expired = common dso_local global i32 0, align 4
@br_multicast_port_query_expired = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @br_multicast_add_port(%struct.net_bridge_port* %0) #0 {
  %2 = alloca %struct.net_bridge_port*, align 8
  store %struct.net_bridge_port* %0, %struct.net_bridge_port** %2, align 8
  %3 = load %struct.net_bridge_port*, %struct.net_bridge_port** %2, align 8
  %4 = getelementptr inbounds %struct.net_bridge_port, %struct.net_bridge_port* %3, i32 0, i32 0
  store i32 1, i32* %4, align 4
  %5 = load %struct.net_bridge_port*, %struct.net_bridge_port** %2, align 8
  %6 = getelementptr inbounds %struct.net_bridge_port, %struct.net_bridge_port* %5, i32 0, i32 2
  %7 = load i32, i32* @br_multicast_router_expired, align 4
  %8 = load %struct.net_bridge_port*, %struct.net_bridge_port** %2, align 8
  %9 = ptrtoint %struct.net_bridge_port* %8 to i64
  %10 = call i32 @setup_timer(i32* %6, i32 %7, i64 %9)
  %11 = load %struct.net_bridge_port*, %struct.net_bridge_port** %2, align 8
  %12 = getelementptr inbounds %struct.net_bridge_port, %struct.net_bridge_port* %11, i32 0, i32 1
  %13 = load i32, i32* @br_multicast_port_query_expired, align 4
  %14 = load %struct.net_bridge_port*, %struct.net_bridge_port** %2, align 8
  %15 = ptrtoint %struct.net_bridge_port* %14 to i64
  %16 = call i32 @setup_timer(i32* %12, i32 %13, i64 %15)
  ret void
}

declare dso_local i32 @setup_timer(i32*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
